--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.17.1",
     "express-session": "^1.18.1",
